--- a/app/globals.css
+++ b/app/globals.css
@@ -24,4 +24,72 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  .h{
+    height: 80vh;
+  }
+
+  .blue-text{
+    color:#0156a9;
+  }
+
+  .green-text{
+    color: #07a034;
+  }
+
+  .green-bg{
+    background-color: #07a034;
+  }
+
+  .blue-bg{
+    background-color: #00182f;
+  }
+
+  .nav{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+   }
+
+  .header{
+    position: relative;
+    padding: 10px;
+   }
+
+   .header-text{
+    position: absolute;
+    bottom: 30%;
+    left: 50px;
+   }
+
+   .cta{
+    position: absolute;
+    left: 50px;
+    bottom: 20%;
+    width: 200px;
+   }
+
+   .donate{
+    width: 100px;
+    border-radius: 5px;
+   }
+/* 
+  .silder{
+    width: calc(300px * 10);
+    height: 450px;
+    margin-bottom: 200px;
+  }
+
+  .slide{
+    height: 430px;
+    width: 300px;
+    margin-right:30px;
+    display: inline-block;
+  }
+
+  .blog-content{
+    padding: 1;
+    display: grid;
+    place-items: center;
+    overflow-x: auto;
+  } */
 }
