--- a/app/globals.css
+++ b/app/globals.css
@@ -50,10 +50,10 @@ body {
     top: 5px;
    }
 
-  .header{
+  /* .header{
     position: relative;
     padding: 10px;
-   }
+   } */
 
    .header-text{
     position: absolute;
