--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+@font-face {
+  font-family: 'GoBold';
+  src: url('/fonts/gobold/Gobold Regular.otf') format('opentype');
+}
+
+/* You can define a utility class to apply the font if desired */
+.font-gobold {
+  font-family: 'GoBold', sans-serif;
+}
+
+
+/* body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  /* background-color: aqua; */
-}
+  background-color: aqua;
+} */
 
-@layer utilities {
+/* @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
@@ -68,4 +79,4 @@ body {
     }
    }
 
-}
+} */
