made changes to toppost and removed ref error

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,9 @@
 .font-gobold {
   font-family: 'GoBold', sans-serif;
 }
-
+*{
+  box-sizing: border-box;
+}
 
  body {
   color: var(--foreground);
