--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,8 @@
     bottom: 0;
     background-color: black;
     z-index: 999999;
+    height: 100vh;
+    width: 100vw;
    }
    
    .sk-folding-cube {
