--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,49 @@
 
  @layer utilities {
 
+  main .slider-container {
+    background-color: rgb(34, 6, 80);
+    overflow: hidden;
+    height: 250px;
+    margin: 50px auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+  }
+  main .slider-container .slider-track {
+    display: flex;
+    width: 7500px;
+    animation: scroll 40s linear infinite;
+  }
+  main .slider-container .slider-track:hover {
+    animation-play-state: paused;
+  }
+  main .slider-container .slider-track .slide {
+    height: 200px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    perspective: 100px;
+  }
+  main .slider-container .slider-track .slide img {
+    height: inherit;
+    width: 100%;
+  }
+  main .slider-container .slider-track .slide img:hover {
+    transform: translateZ(20px);
+  }
+  
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-3750px);
+    }
+  }
+
   .content > img{
     max-width: 60vh;
   }
